Tab Index Set tabIndex to -1 to prevent tab key from switching focus

--- a/CMDAC.html
+++ b/CMDAC.html
@@ -13,13 +13,13 @@
         </header>
         <div id="Container-CMD">
             <nav id="Nav-CMD">
-                <input id="CMDLine" type="text" placeholder="Search Here">
+                <input id="CMDLine" type="text" placeholder="Search Here" tabindex="-1">
                 <nav id="Suggestions">
-                    <button id="Button-0" class="Buttons"></button>
-                    <button id="Button-1" class="Buttons"></button>
-                    <button id="Button-2" class="Buttons"></button>
-                    <button id="Button-3" class="Buttons"></button>
-                    <button id="Button-4" class="Buttons"></button>
+                    <button id="Button-0" class="Buttons" tabindex="-1"></button>
+                    <button id="Button-1" class="Buttons" tabindex="-1"></button>
+                    <button id="Button-2" class="Buttons" tabindex="-1"></button>
+                    <button id="Button-3" class="Buttons" tabindex="-1"></button>
+                    <button id="Button-4" class="Buttons" tabindex="-1"></button>
                 </nav>
             </nav>
         </div>
